--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.14",
-        "@vitejs/plugin-vue": "^4.4.1"
+        "@vitejs/plugin-vue": "^4.4.1",
+        "axios": "^1.6.2",
+        "vue-axios": "^3.5.2"
     }
 }
